feat(nav): 新增头部导航栏目与样式
- 在HTML中添加头部导航栏结构
- 新增主导航区CSS样式，包括高度、边框和背景色
- 定义导航栏目文字颜色、字体大小和行高
- 实现导航列表项的浮动布局和间距调整
- 保证文字居中及整体导航栏视觉统一

--- a/尚品汇项目开发/CSS/index.css/index.css
+++ b/尚品汇项目开发/CSS/index.css/index.css
@@ -98,3 +98,33 @@ a {
 }
 
 /* #endregion */
+
+/* #region 主导航区 */
+.head_nav {
+    height: 48px;
+    border-bottom: 1px solid #DD302D;
+}
+.head_nav .all_types {
+    background-color: #DD302D;
+    width: 190px;
+    height: 48px;
+    color: white;
+    line-height: 48px;
+    text-align: center;
+    font-size: 16px;
+}
+.head_nav .container .head_list {
+    height: 48px;
+    line-height: 48px;
+}
+.head_list li {
+    float: left;
+    margin: 0 10px;
+}
+.head_list li a {
+    font-size: 16px;
+    color: #333;
+}
+
+/* #endregion 主导航区结束 */
+
