--- a/尚品汇项目开发/CSS/index.css/index.css
+++ b/尚品汇项目开发/CSS/index.css/index.css
@@ -288,7 +288,6 @@ a {
 .picture_show {
     height: 190px;
     margin-top: 10px;
-    background-color: skyblue;
 }
 .picture_show .container img {
     float: left;
@@ -334,7 +333,7 @@ a {
     width: 194px;
     padding: 0 18px;
 }
-.floor_content .item1_list div{
+.floor_content .item1_list a{
     width: 90px;
     padding-bottom: 3.5px;
     margin-top: 14.4px;
