feat(footer): 新增页脚区域及其样式
- 在HTML中添加完整页脚结构，包括购物指南等多个栏目链接
- 新增页脚上侧和下侧的布局与内容
- 在CSS中添加页脚相关样式，设置背景色、高度及边框
- 定义链接列表样式，设置字体颜色和间距
- 增加页脚底部资源信息及版权文字样式
- 优化浮动布局和边框样式，保持整体美观一致

--- a/尚品汇项目开发/CSS/index.css/index.css
+++ b/尚品汇项目开发/CSS/index.css/index.css
@@ -246,12 +246,11 @@ a {
     margin-top: 15px;
 }
 
-.news .news_content ul li{
+.news .news_content ul li {
     margin-top: 6px;
     font-size: 12px;
     color: #666;
 }
-
 
 .other_nav {
     /* border: 1px solid #d9d9d9; */
@@ -264,13 +263,13 @@ a {
 .other_nav_list:first-child {
     margin-top: 16px;
 }
-.other_nav_list:nth-child(2){
+.other_nav_list:nth-child(2) {
     margin: 17px 0;
 }
 .other_nav_list li {
     width: 48px;
     height: 70px;
-    float:  left;
+    float: left;
     margin: 0 11px;
     text-align: center;
 }
@@ -278,11 +277,9 @@ a {
     margin-left: 16px;
 }
 
-
 /* #endregion 右侧其他信息区 end */
 
 /* #endregion 主要内容区 end */
-
 
 /* #region 图片展示区 start */
 .picture_show {
@@ -313,19 +310,17 @@ a {
 .floor .left_header {
     font-size: 20px;
     color: #000;
-
 }
 
-.floor .right_header li{
+.floor .right_header li {
     float: left;
     padding: 0 10px;
-    border-left: 1px solid #666 ;
+    border-left: 1px solid #666;
     margin: 8px 0;
 }
-.floor .right_header li:first-child{
-    border-left: 0 ;
+.floor .right_header li:first-child {
+    border-left: 0;
 }
-
 
 /* 下侧 */
 .floor_content .item1 {
@@ -333,19 +328,19 @@ a {
     width: 194px;
     padding: 0 18px;
 }
-.floor_content .item1_list a{
+.floor_content .item1_list a {
     width: 90px;
     padding-bottom: 3.5px;
     margin-top: 14.4px;
     border-bottom: 1px solid #d9d9d9;
     text-align: center;
 }
-.floor_content .item1_top .left_item{
+.floor_content .item1_top .left_item {
     float: left;
     margin-left: 2px;
 }
 
-.floor_content .item1_top .right_item{
+.floor_content .item1_top .right_item {
     float: right;
     margin-right: 2px;
 }
@@ -362,19 +357,81 @@ a {
     width: 206px;
     height: 432px;
 }
-.floor_content .item3 img{
+.floor_content .item3 img {
     border-bottom: 1px solid #e2e2e2;
 }
 .floor_content .item4 img {
-    border:1px solid #e2e2e2;
+    border: 1px solid #e2e2e2;
 }
 
 .floor_content .item5 {
     width: 206px;
     height: 432px;
 }
-.floor_content .item5 img{
+.floor_content .item5 img {
     border-bottom: 1px solid #e2e2e2;
 }
 /* #endregion 商品区 楼层1 end */
 
+/* #region 页脚 start */
+.page_footer {
+    height: 440px;
+    margin-top: 48px;
+    background-color: #483e3e;
+}
+.page_footer .footer_top {
+    height: 224px;
+    padding-bottom: 22px;
+    border-bottom: 1px solid #584d4d;
+    margin-bottom: 47px;
+}
+/* .page_footer .links-list {
+} */
+.page_footer .links_div {
+    float: left;
+    margin-top: 48px;
+    width: 188px;
+    height: 176px;
+    margin-right: 9px;
+}
+.page_footer .links-list-last {
+    margin-right: 0;
+}
+.page_footer .links-list1 {
+    background-color: skyblue;
+}
+.page_footer ul li {
+    margin-bottom: 5px;
+}
+.page_footer .footer_top ul li a {
+    color: #ffffff;
+    font-size: 14px;
+}
+
+/* 下半部分 */
+.resource_top {
+    margin-top: 44px;
+}
+.resource_top li {
+    float: left;
+    /* text-align: center; */
+}
+.resource_top li a {
+    color: #ffffff;
+    font-size: 12px;
+    padding: 0 26px;
+    border-right: 1px solid #ffffff;
+}
+.resource_top li:first-child {
+    margin-left: 94px;
+}
+.resource_top li:nth-child(10) a {
+    border-right: 0;
+}
+
+.resource_bottom {
+    margin-top: 10px;
+    color: #ffffff;
+    text-align: center;
+}
+/* #endregion 页脚  end */
